<resources>
    <string name="app_name">GitHubRepos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="repositories">Repositories</string>
    <string name="sort">Sort</string>
    <string name="featured_authors">Featured authors</string>
    <string name="settings">Settings</string>
    <string name="about_the_application">About the application</string>
    // Fragmrnt_settings
    <string name="fragment_settings">Settings</string>
    <string name="save_button">Save</string>
    <string name="are_common">Are common</string>
    <string name="Number_of_displayed_repositories">Number of displayed repositories</string>
    <string name="select_the_total_number">Select the total number of repositories to display on the screen (numbers only)</string>
    // Fragmrnt_about_the_application
    <string name="about_app">About the application</string>
    <string name="client">Unofficial client for GitHub</string>
    <string name="author">Author: Karaev Shamil</string>
    //Fragment_details_repository
    <string name="error">Error</string>
    //Fragment_details_user
    <string name="subscribers">Subscribers: </string>
    <string name="subscriptions">Subscriptions: </string>
    <string name="repositories_text">Repositories: </string>
    //Fragment_featured_authors
    <string name="featured_authors_fragment">Featured Authors</string>
    <string name="author_search">Author Search</string>

    <string name="share">Share</string>






    <string-array name="sorting_repository_list">
        <item>Default</item>
        <item>By name</item>
    </string-array>
</resources>